small edits to messages schema and handling api rate limiting in streams.ppy

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 config/
 virtualenvs/
+venvs/
+config.json
 catalog.json
 state.json
+.target/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
